--- a/ureport/templates/ureport/partials/viz/choropleth.html
+++ b/ureport/templates/ureport/partials/viz/choropleth.html
@@ -180,7 +180,7 @@
             if (String(jQuery(v).text()) == "district") {
 
 
-                render_text = render_text + "<p>District: " + Math.round(jQuery(data[k]).text()) + "</p>";
+                render_text = render_text + "<p>District: " + jQuery(data[k]).text() + "</p>";
             }
             else if (String(jQuery(v).text()) == "yes") {
 
