--- a/ureport/templates/ureport_layout.html
+++ b/ureport/templates/ureport_layout.html
@@ -56,12 +56,14 @@
             </div>
                 {% if quote %}
                     <div class="quotebox">
+                        <div class="quote_head">
                         <div class="title">
                             YOUR SAY:
                         </div>
                         <div class="topquote">
                             {{ quote.question }}
                         </div>
+                            </div>
                         <div class="bottomquote">
                             {{ quote.quote }}
                         </div>
