--- a/ureport/static/stylesheets/ureport_home.css
+++ b/ureport/static/stylesheets/ureport_home.css
@@ -147,15 +147,16 @@ div.why-placeholder span {
 
 .quotebox {
     margin-left: 15px;
-    width: 148px;
-    height: 115px;
-    background: url('../images/quote_box_bg.png') no-repeat;
+    
+    height: auto;
+    
     position: relative;
     padding: 10px;
+     border: 1px solid #2b2b2b;
 }
 
 .title, .topquote {
-    color: white;
+    color: black;
 }
 
 .title {
@@ -165,25 +166,39 @@ div.why-placeholder span {
 }
 
 .topquote {
-	position: absolute;
-	right: 0;
-	top: 10px;
+	
+	float:right;
 	width: 90px;
-}
+    margin-top:-15px;
 
+}
+.quote_head{
+    background: url('../images/quote_box_bg_top.png') 100% 102% no-repeat;
+    width:180px;
+    height:70px;
+    background-color:#2b2b2b;
+    color:#FFFFFF;
+    padding: 2px;
+    margin-left:-10px;
+    margin-top:-10px;
+
+}
 .bottomquote {
-	position: absolute;
-	top: 74px;
-	height: 46px;
+	padding: 3px;
+	height: auto;
 	overflow: hidden;
-}
+    margin-bottom:3px;
 
+    width:160px;
+       
+   
+}
+	
 .quoted {
-	position: absolute;
-	bottom: 5px;
-	right: 5px;
+	margin-left: 2px;
 	color: grey;
 	font-size: 11px;
+    margin-bottom: 5px;
 }
 
 .footer {
