added age and gender to reporter page

--- a/ureport/templates/ureport/partials/contacts/contacts_row.html
+++ b/ureport/templates/ureport/partials/contacts/contacts_row.html
@@ -18,6 +18,12 @@
             {% endfor %}
         </ul>
     </td>
+    <td>
+    {{  object.age }}
+    </td>
+    <td>
+    {{ object.gender }}
+    </td>
     <td id="row_{{ object.pk }}">{{ object.reporting_location.name }}</td>
     <td>
         {% if object.groups %}
