--- a/ureport/static/stylesheets/ureport_home.css
+++ b/ureport/static/stylesheets/ureport_home.css
@@ -28,10 +28,14 @@ a {
 }
 
 #span_info {
-    border-bottom: 1px solid #BBD8E7;
-
+   border-bottom: 1px solid #BBD8E7;
+    float: right;
+    margin-right: 10px;
+    margin-top: 10px;
     padding-bottom: 3px;
     width: 120px;
+
+   
 }
 .signup
 {
