added language to ureporters

--- a/ureport/templates/ureport/partials/contacts/contacts_row.html
+++ b/ureport/templates/ureport/partials/contacts/contacts_row.html
@@ -26,6 +26,13 @@
     {{ object.gender }}
     {% endif %}
     </td>
+    <td>
+    {% if contact.language %}
+        {{ contact.language }}
+        {% else %}
+        en
+    {% endif %}
+    </td>
     <td id="row_{{ object.pk }}">{{ object.reporting_location.name }}</td>
     <td>
         {% if object.groups %}
