added excel export to flagged messages

--- a/ureport/templates/ureport/flagged_message_base.html
+++ b/ureport/templates/ureport/flagged_message_base.html
@@ -22,5 +22,6 @@
     <a href="{% url ureport.views.create_flags %}" style="float:left">
       <img border="0" src="/static/rapidsms/icons/silk/add.png" alt=""/>Add New Flag
     </a>
+    <a style="float:right;" href="?export=true">Export To Excel</a>
     </div>
 {% endblock %}
