add replyform to respnses

--- a/ureport/templates/ureport/partials/polls/poll_partial_base.html
+++ b/ureport/templates/ureport/partials/polls/poll_partial_base.html
@@ -23,6 +23,20 @@
             $(link).parents("tr").load(url);
         }
     </script>
+    <style>
+    #id_poll{
+        width:100%;
+        overflow: hidden;
+    }
+    #div_action_1{
+        margin-top:80px;
+        left:10px;
+        height:100px;
+    }
+    #actions{
+        height:220px;
+    }
+    </style>
     {{ block.super }}
 {% endblock %}
 {% block partial_base_content %}
