ureporter profile page

--- a/ureport/templates/ureport/partials/messages/flagged_message_row.html
+++ b/ureport/templates/ureport/partials/messages/flagged_message_row.html
@@ -11,7 +11,7 @@
             {{ object.message.connection.contact.name }} ({% endif %}{{ object.message.message.connection.identity }}{% if object.message.connection.contact %}){% endif %}
     <ul>
         <li>
-            <a href="/contact/{{ object.message.connection.pk }}/message_history/">
+            <a href="/messagehistory/{{ object.message.connection.pk }}/">
                 Show history
             </a>
         </li>
