--- a/ureport/templates/ureport/message_history_base.html
+++ b/ureport/templates/ureport/message_history_base.html
@@ -26,17 +26,23 @@ $('#div_action_0').find('a').html("Send Message");
 <h2>Profile for {{ contact.name }}</h2>
 
 <table style="font-size: 16px;">
-    <tr><td>Name:</td> <td>{{ contact.name }}</td></tr>
-    <tr><td>Gender:</td> <td>{{ contact.gender }}</td></tr>
-    <tr><td>age:</td> <td>{{ contact.age }}</td></tr>
-    <tr><td>District:</td> <td>{{ contact.reporting_location.name }}</td></tr>
-    <tr><td>Village</td> <td>{{ contact.village }}</td></tr>
-    <tr><td>Join Date:</td> <td>{{ contact.join_date }}</td></tr>
+    <tr><td>Name: </td> <td>{{ contact.name }}</td></tr>
+    <tr><td>Gender: </td> <td>{{ contact.gender }}</td></tr>
+    <tr><td>age: </td> <td>{{ contact.age }}</td></tr>
+    <tr><td>District: </td> <td>{{ contact.reporting_location.name }}</td></tr>
+    <tr><td>Village: </td> <td>{{ contact.village }}</td></tr>
+    <tr><td>Join Date: </td> <td>{{ contact.join_date }}</td></tr>
     {% if not contact.is_active %}
-        <tr><td>Quit Date:</td> <td>{{ contact.quit_date }}</td></tr>
+        <tr><td>Quit Date: </td> <td>{{ contact.quit_date }}</td></tr>
     {% endif %}
 
-    <tr><td>Language</td> <td>{{ contact.language }}</td></tr>
+    <tr><td>Language: </td> <td>
+        {% if contact.language == "" %}
+        en
+        {% else %}
+        {{ contact.language }}
+         {% endif %}
+    </td></tr>
 </table>
 
     </div>
