--- a/ureport/templates/ureport/ureporters_base.html
+++ b/ureport/templates/ureport/ureporters_base.html
@@ -66,5 +66,5 @@
                             </div>
                         {% endif %}
                     {% endfor %}
-     <a href="{{ MEDIA_URL }}ureport/spreadsheets/ureporters.xls">Export All To Excel</a>
+     <a href="{{ MEDIA_URL }}ureport/spreadsheets/ureporters.zip">Export All To Excel</a>
                 {% endblock %}
