--- a/ureport/static/stylesheets/ureporters.css
+++ b/ureport/static/stylesheets/ureporters.css
@@ -54,3 +54,9 @@ margin-top:-60px;
 .export_link{
    clear:both;
 }
+.export_link{
+    position:absolute;
+    margin-top: 200px;
+    z-index: 999;
+    left:200px;
+}
