--- a/ureport/templates/ureport/partials/tag_cloud/tag_cloud.html
+++ b/ureport/templates/ureport/partials/tag_cloud/tag_cloud.html
@@ -29,56 +29,79 @@ tt a {
 }
 
 .tags {
-    line-height:3em;
+    line-height: 180%;
+    
+    
 }
 .tag1 {
-    font-size: .8em;
+    font-size: 80%;
+    
 }
 
 .tag2 {
-    font-size: 1em;
+    font-size: 100%;
+
 }
 
 .tag3 {
-    font-size: 1.2em;
+    font-size: 120%;
+
+
 }
 
 .tag4 {
-    font-size: 1.6em;
+    font-size: 160%;
+    font-weight: normal;
 }
 
 .tag5 {
-    font-size: 1.8em;
+    font-size: 180%;
+    font-weight: normal;
+
 }
 .tag6 {
-    font-size: 2.0em;
+    font-size: 200%;
+    font-weight: 100;
+
 }
 .tag7 {
-    font-size: 2.2em;
+    font-size: 220%;
+    font-weight: 200;
+
 }
 .tag8 {
-    font-size: 2.4em;
+    font-size: 240%;
+    font-weight: 300;
+
 }
 .tag9 {
-    font-size: 2.6em;
+    font-size: 260%;
+    font-weight: 400;
+
 }
 
 .tag10 {
-    font-size: 2.8em;
+    font-size: 280%;
+    font-weight: 500;
+
 }
 .tag11 {
-    font-size: 3.0em;
+    font-size: 300%;
+    font-weight: 600;
 }
 
 .tag12 {
-    font-size: 3.2em;
+    font-size: 320%;
+    font-weight: 700;
 }
 
 .tag13 {
-    font-size: 3.4em;
+    font-size: 350%;
+    font-weight: 800;
 }
 .tag14 {
-    font-size: 3.6em;
+    font-size: 410%;
+    font-weight: 900;
 }
 
 #tag_cloud {
