--- a/ureport/templates/ureport/message_history_base.html
+++ b/ureport/templates/ureport/message_history_base.html
@@ -31,6 +31,10 @@ $('#div_action_0').find('a').html("Send Message");
     <tr><td>Gender: </td> <td>{{ contact.gender }}</td></tr>
     <tr><td>age: </td> <td>{{ contact.age }}</td></tr>
     <tr><td>District: </td> <td>{{ contact.reporting_location.name }}</td></tr>
+
+    <tr><td>HEALTH FACILITY: </td> <td>{{ contact.health_facility }}</td></tr>
+
+
     <tr><td>Village: </td> <td>{{ contact.village }}</td></tr>
     <tr><td>Join Date: </td> <td>{{ contact.join_date }}</td></tr>
     <tr><td>Group: </td><td>{{ contact.groups.all.0 }}</td></tr>
