--- a/ureport/templates/ureport/new_flag.html
+++ b/ureport/templates/ureport/new_flag.html
@@ -4,7 +4,7 @@
 <div class="module">
     <h2>Add New flag</h2>
     <table>
-        <form method="Post" action="/flags/new/">
+        <form method="Post" >
    {{  flags_form.as_table }}
            <tr><td> <input type="submit" name="submit" value="submit"></td></tr>
 </table>
@@ -16,7 +16,9 @@
     <thead><tr><td>name</td> <td>messages</td> <td></td></tr></thead>
     {% for flag in all_flags %}
 
-<tr><td>{{flag.name}}</td>  <td><a href="/flags/{{ flag.pk }}/messages/">messages</a></td><td><a href="/flags/{{ flag.pk }}/delete/">delete</a> </td></tr>
+<tr><td>{{flag.name}}</td>  <td><a href="/flags/{{ flag.pk }}/messages/">messages</a></td>
+    <td><a href="/flags/{{ flag.pk }}/edit/">edit</a> </td>
+    <td><a href="/flags/{{ flag.pk }}/delete/">delete</a> </td></tr>
     {% endfor %}
     </table>
     </div>
