--- a/ureport/templates/layout.html
+++ b/ureport/templates/layout.html
@@ -1,92 +1,106 @@
-{% load tabs_tags %}
-{% block top_container %}
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
-    <head>
-        <title>{% block title %}Ureport{% endblock %}</title>
-        <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
-        {% block stylesheets %}
-        <link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}rapidsms/stylesheets/splits.css" />
-        <link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}rapidsms/stylesheets/modules.css" />
-        <link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}rapidsms/stylesheets/tables.css" />
-        <link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}rapidsms/stylesheets/forms.css" />
-        <link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}rapidsms/stylesheets/icons.css" />
-        <link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}ureport/stylesheets/ureport.css"/>
-        {% endblock %}
+<html lang="en">
+<head>
+    <title>Ureport - {% block page_title %}Voice Matters{% endblock %}</title>
 
-        {% block javascripts %}
+    <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}ureport/stylesheets/base.css">
+<link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}ureport/stylesheets/ureport.css">
+ <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
+    <!--[if lt IE 9]>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->    
+    {% block stylesheets %}
+         <link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}rapidsms/stylesheets/modules.css" />
+
+    {% endblock %}
+
+    {% block javascripts %}
         <script type="text/javascript" src="{{ MEDIA_URL }}rapidsms/javascripts/jquery-1.3.2.min.js"></script>
         <script type="text/javascript" src="{{ MEDIA_URL }}rapidsms/javascripts/collapse.js"></script>
-        <script type="text/javascript" src="{{ MEDIA_URL }}generic/javascripts/jquery-ui-1.8.11.custom.min.js"></script>        
-        {% endblock %}
-            <script type="text/javascript">
-            
+        <script type="text/javascript" src="{{ MEDIA_URL }}generic/javascripts/jquery-ui-1.8.11.custom.min.js"></script>
+        <script type="text/javascript" src="{{ MEDIA_URL }}ureport/javascripts/ureport.js"></script>
+         <script type="text/javascript">
+
               var _gaq = _gaq || [];
               _gaq.push(['_setAccount', 'UA-23521720-1']);
               _gaq.push(['_trackPageview']);
-            
+
               (function() {
                 var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
                 ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
                 var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
               })();
-            
+
             </script>
-    </head>
-    <body>
-    <div id="container">
-        {% block header %}
-        <div id="header">
-            <div id="branding">
-                <a title="Return to the Dashboard" href="{% url rapidsms-dashboard %}">
-                    <img id="img_logo" alt="Ureport" src="/static/ureport/images/brand.png"/>
-                    <span id="span_tagline">voice matters</span>
-                    <span id="span_info"><span id="span_total">{{ total_ureporters }}</span> voices strong - text "join" to 8500 to add yours!</span>
-                </a>
-            </div>
+    {% endblock %}
+</head>
+<body>
+    <div class="container container-fluid" style="background-color:#ffffff;">
+        <div class="banner">
+            <a href="/">
+            <span class="brand">UReport</span>
+            <span class="tagline">VOICE MATTERS</span>
+            </a>
+            {% load humanize %}
+            <span id="span_info"><span id="span_total">{{ total_ureporters|intcomma }}</span> members to date</span>
+        </div>
+        <div class="content">
+        <div class="subnav">
 
+          <ul class="nav nav-pills">
+           <li class="first"><a href="/">HOME</a></li>
+	                {% if user.is_authenticated %}
+	                   <li><a href="{% url ureport-polls %}">POLL ADMIN</a></li>
+	                   <li><a href="{% url messagelog %}">MESSAGE LOG</a></li>
+	                   <li><a href="{% url ureport-contact %}">UREPORTERS</a></li>
+	                   <li><a href="{% url flaggedmessages %}">FLAGGED MESSAGES</a></li>
+                         <li><a href="{% url mp_dashboard %}">MP DASHBOARD</a></li>
+	                {% else %}
+	                   <li><a href="/accounts/login">LOGIN</a></li>
+	                {% endif %}
+          </ul>
+        </div>
 
-            {% block auth %}
-            <div id="auth">{% if user.is_authenticated %}
-                <a href="{% url rapidsms-logout %}">Log out {{ user.username }}</a>{% else %}
-                <a href="{% url rapidsms-login %}">Log in</a>{% endif %}
-            </div>
+            {% block content %}
+                <!--  MAIN CONTENT GOES HERE -->
             {% endblock %}
-           <div class="clear"></div>
-            <ul id="tabs">{% for tab in tabs %}
-                <li class="tab{% if tab.is_active %} active{% endif %}">
-                    <a href="{{ tab.url }}"><span>{{ tab.caption }}</span></a>
-                </li>{% endfor %}
-            </ul>
-            {% block page_tabs %}
-            {% endblock %}
-        </div>
-        {% endblock %}
-        <div style="clear:both"></div>
-        <script language="JavaScript">
-        category_colors = [{% for c in colors %}'{{ c }}'{% if not forloop.last %},{% endif %}{% endfor %}];
-        </script>
-        <div id="inner_content">
-{% endblock %}{% comment %}ends block top_container{% endcomment %}
-            {% block content %}{% endblock %}
-{% block bottom_container %}
-        </div>
-        {% block footer %}
+   </div>
 
-        <div id="footer">
-            <p class="rights">
-                Copyright &copy; 2008 &#8211; 2010
-                <a href="http://unicef.org">UNICEF</a> et al.<br />
-                <a href="http://github.com/rapidsms/rapidsms">RapidSMS</a> and
-                <a href="http://github.com/daveycrockett/rapidsms-ureport">Ureport</a> are available under
-                <a href="http://github.com/rapidsms/rapidsms/raw/master/LICENSE">the BSD license</a>.
-            </p>
-        </div>
-        {% endblock %}
-
+	    <div class="footer">
+	       <div class="sponsors">
+	           Supported by:
+	           <img src="{{ MEDIA_URL }}ureport/images/unicef_logo.png"/>
+	           <img src="{{ MEDIA_URL }}ureport/images/brac_logo.png"/>
+	           <img src="{{ MEDIA_URL }}ureport/images/scouts_logo.png"/>
+	           <img src="{{ MEDIA_URL }}ureport/images/cou_logo.png"/>
+	           <img src="{{ MEDIA_URL }}ureport/images/gem_logo.png"/>
+	       </div>
+	       <div class="footerlinks">
+	           <div class="nav-bottom">
+                <ul>
+	                <li class="first"><a href="/">HOME</a></li>
+	                <li><a href="/#poll_results">POLL RESULTS</a></li>
+	                <li><a href="about_ureport">ABOUT UREPORT</a></li>
+	                <li><a href="/join/">HOW TO JOIN</a></li>
+	                <!-- <li><a href="#">SITE MAP</a></li>
+	                <li><a href="#">CONTACT US</a></li> -->
+	                {% if user.is_authenticated %}
+	                   <li><a href="{% url ureport-polls %}">POLL ADMIN</a></li>
+	                   <li><a href="{% url messagelog %}">MESSAGE LOG</a></li>
+	                   <li><a href="{% url ureport-contact %}">UREPORTERS</a></li>
+	                   <li><a href="{% url flaggedmessages %}">FLAGGED MESSAGES</a></li>
+                        <li><a href="{% url mp_dashboard %}">MP DASHBOARD</a></li>
+	                {% else %}
+	                   <li><a href="/accounts/login">LOGIN</a></li>
+	                {% endif %}
+                </ul>
+	           </div>
+	           <p>Copyright &copy; 2010 - 2011 UNICEF et al.</p>
+	           <p>RapidSMS and Ureport are available under the BSD license.</p>
+	        </div>
+	    </div>
     </div>
-    </body>
+</body>
 </html>
-{% endblock %}{% comment %}ends block bottom_container{% endcomment %}
