--- a/ureport/templates/ureport/mp_dashboard.html
+++ b/ureport/templates/ureport/mp_dashboard.html
@@ -9,7 +9,7 @@
     <div class="module">
         <h2>Filter Poll Contacts</h2>
         
-            <form action="/mp_dashboard/?filtered=true" method="GET" class="form-inline">
+            <form action="/mp_dashboard/?filtered=true" method="post" class="form-inline">
                 {% for form in filter_forms %}
                     <table class="inline" >
                     {% for field in form.visible_fields %}
@@ -35,7 +35,7 @@
                 {% endfor %}
 
                 </br>
-            <table class="inline">
+            <table style="float:right;>
                 <tr>
                     
                     <td><a  class="btn-primary btn btn-large" href="javascript:void(0)" onclick="filter(this,'./?filter=true')"> Update</a></td>
@@ -44,7 +44,7 @@
             </form>
 
 <div class="results" style="margin-top:210px;margin-left:100px;padding: 7px 15px;color: #333333;background-color: #f7f7f7;border:1px solid #ccc;">
-   
+   No Contacts Selected
 
 </div>
 
@@ -59,7 +59,7 @@
 
                 <tr><td>Name:</td><td>{{ poll_form.name}}</td><td>Question:</td><td>{{ poll_form.question}}</td> <td><input type="submit" class="btn-primary btn btn-large" value="Send Poll"></td></tr>
                 <tr><td>Type:</td><td>{{ poll_form.type}}</td><td>Luo Question:</td><td>{{ poll_form.question_luo}}</td><td></td></tr>
-                <tr><td></td><td></td><td>Auto Response:</td><td>{{ poll_form.default_response}}</td><td></td></tr>
+                <tr><td>Response Type:</td><td>{{ poll_form.response_type}}</td><td>Auto Response:</td><td>{{ poll_form.default_response}}</td><td></td></tr>
                 <tr><td></td><td></td><td>Auto Response Luo:</td><td>{{ poll_form.default_response_luo}}</td><td></td></tr>
 
 
