--- a/ureport/templates/ureport/mp_dashboard.html
+++ b/ureport/templates/ureport/mp_dashboard.html
@@ -35,7 +35,7 @@
                 {% endfor %}
 
                 </br>
-            <table style="float:right;>
+            <table >
                 <tr>
                     
                     <td><a  class="btn-primary btn btn-large" href="javascript:void(0)" onclick="filter(this,'./?filter=true')"> Update</a></td>
